--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body{
+    background-color: #ff00ff;
+}
